fix up homepage spacing

--- a/style/scss/components/_section-banner.scss
+++ b/style/scss/components/_section-banner.scss
@@ -44,3 +44,20 @@
     }
   }
 }
+
+.home-contact-banner--image {
+  background: url(/images/contact.jpg) center center/cover;
+  padding-bottom: 100%;
+
+  @include md {
+    padding-bottom: 180%;
+  }
+  @include lg {
+    padding-bottom: 144%;
+    margin-bottom: 15%;
+  }
+
+  @include xl {
+    padding-bottom: 112%;
+  }
+}
